small spacing & sizing fixes in contact section

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -399,12 +399,12 @@
     }
   }
 
-  h1.section-title { margin-bottom: 1.325em; }
+  h1.section-title { margin-bottom: 1.125em; }
 
   .muted { font-size: 68%; }
 
   .big-text {
-    font-size: 2em;
+    font-size: 1.875em;
     margin-bottom: 1.325em;
   }
 
